fixed flex overflow

--- a/AppleSearch/index.css
+++ b/AppleSearch/index.css
@@ -47,14 +47,15 @@ nav {
 }
 
 .divider {
-  margin: 0 10rem;
+  margin: 0 10em;
 }
 
 .albums-list {
   display: flex;
   flex-flow: row wrap;
   margin: 0 10em;
-  justify-content: space-around;
+  justify-content: center;
+  overflow: auto;
 }
 /* content layout */
 
@@ -74,17 +75,5 @@ nav {
 
 .album-cover {
   width: 100%;
-}
-
-@media screen and (min-width: 40em) {
-  .card {
-    max-width: calc(50% - 1em);
-  }
-}
-
-@media screen and (min-width: 60em) {
-  .card {
-    max-width: calc(25% - 1em);
-  }
 }
 /* card styling */
